commit of updated HTML CSS and JS

--- a/game.html
+++ b/game.html
@@ -38,7 +38,7 @@
     <div class= "card timer">
       <div class = "timer-text">
       <div class="large-font timer-count">10</div>
-      <h2>seconds remaining</h2>
+      <h2>seconds until game over</h2>
     </div>
     </body>
     <script src="script.js"></script>
