--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="cotainer">
-    <div id="home" class="flex-center flex-column">
-        <h1>Quiz</h1>
-        <a class="btn" href="/game.html">Play</a>
-        <a class="btn" href="/highscores.html">High Scores</a>
-    </div>
-    
-   
+<body>  
+    <h1 class="time" style="text-align:center;"></h1>
+    <div id="main"></div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
