--- a/index.html
+++ b/index.html
@@ -10,7 +10,40 @@
 <body>  
     <h1 class="time" style="text-align:center;"></h1>
     <div id="main"></div>
-
+    <header>
+        <!--this class is the start button for the quiz. js uses quieryselector on this class for click event-->
+        <div class= "large-font">Quiz</div>
+        <button class="start-button">Start</button>
+      </header>
+    <div class="container">
+        <!--these div classes are supposed to be the unique selection options for the questions in the quiz 1 for each of the 4 options.-->
+        <div id="game" class="justify-center flex-column">
+            <h2 id="question">What are the answers to the questions?</h2>
+            <div class="choice-container">
+                <p class="choice-prefix">A</p>
+                <p class="choice-text" data-number="1">Choice 1</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">B</p>
+                <p class="choice-text" data-number="2">Choice 2</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">C</p>
+                <p class="choice-text" data-number="3">Choice 3</p>
+            </div>
+            <div class="choice-container">
+                <p class="choice-prefix">D</p>
+                <p class="choice-text" data-number="4">Choice 4</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--this div class is the timer function. timer on js file quiery selects this class-->
+<div class= "card timer">
+  <div class = "timer-text">
+  <div class="large-font timer-count">10</div>
+  <h3>seconds until game over</h3>
+</div>
     <script src="./script.js"></script>
 </body>
 </html>
